welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:7: error: illegal start of simple expression
  while () {
         ^ZigZag:17: error: ')' expected but '}' found.
}
^