welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.code
override def run() {
}

def doTheSnakyThing() {
  var compt:Int = 0
  
  pasDeSerpent()
  while () {
    avance()
    droite()
    if (estFaceMur()) {
    	gauche()
    	gauche()
    }
    pasDeSerpent()   
  }
  droite()
}

def pasDeSerpent() {
  while (!estFaceMur()) {
    avance()
  }
  setDirection(Direction.NORTH)
}